# turbolog

./: .dockerignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  deny.toml
.config/: nextest.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benches/: throughput.rs
deploy/: docker-compose.yml
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
docs/: OPERATIONS.md  SLO.md
examples/: loadtest.rs
scripts/: download_model.sh  install.sh
src/: chunks.rs  cli.rs  detect.rs  embedded.rs  engine.rs  history.rs  http.rs  index.rs  ingest.rs  lib.rs  llm.rs  main.rs  metrics.rs  pipeline.rs  scan.rs  wal.rs  watch.rs
src/tui/: app.rs  data.rs  events.rs  mod.rs  render.rs
tasks/: lessons.md  todo.md
tests/: cli.rs  phase2.rs  phase3.rs  pipeline.rs
