[package]
name = "turbolog"
version = "0.2.0"
edition = "2021"
description = "Ultralight time-series log vector engine — real-time indexing & anomaly detection"
license = "MIT"
rust-version = "1.85"

[features]
default = []
embedded-model = []

[dependencies]
turbovec = "0.8"
drain-rs = "0.3"
lru = "0.12"
ort = "2.0.0-rc.12"
tokenizers = "0.23"
arc-swap = "1.9"
anyhow = "1"
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

[profile.release]
lto = true
codegen-units = 1
