[package]
name = "turbolog"
version = "0.2.1"
edition = "2021"
description = "Ultralight log anomaly detection — no API key, no Python, pipe-friendly CLI with local LLM explain"
license = "MIT"
rust-version = "1.88"
repository = "https://github.com/shguddn8591/turbolog"
homepage = "https://github.com/shguddn8591/turbolog"
keywords = ["logging", "anomaly-detection", "cli", "observability", "llm"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[features]
default = ["embedded-model"]
embedded-model = []
tui = ["dep:ratatui", "dep:crossterm"]
server = ["dep:tiny_http", "dep:subtle", "dep:arc-swap"]

[dependencies]
turbovec = "0.8"
drain-rs = "0.3"
lru = "0.12"
ort = "2.0.0-rc.12"
tokenizers = "0.23"
arc-swap = { version = "1.9", optional = true }
anyhow = "1"
tiny_http = { version = "0.12", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
subtle = { version = "2", optional = true }

# Optional TUI dependencies
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false
required-features = ["server"]

[[example]]
name = "loadtest"
required-features = ["server"]

[profile.release]
lto = true
codegen-units = 1
